znk-exercise-pager css

--- a/src/components/znkExercise/scss/_znk-exercise-pager-drv.scss
+++ b/src/components/znkExercise/scss/_znk-exercise-pager-drv.scss
@@ -11,7 +11,7 @@ znk-exercise-pager {
     @include absolute-position(null, null, 0, null);
     box-sizing: border-box;
     overflow: hidden;
-    margin: 7px;
+    margin: 0 7px 7px;
     background: #f5f8fa;
     border-radius: 30px;
 
