znk-exercise-pager css

--- a/src/components/znkExercise/scss/_znk-exercise-pager-drv.scss
+++ b/src/components/znkExercise/scss/_znk-exercise-pager-drv.scss
@@ -28,6 +28,7 @@ znk-exercise-pager {
             align-items: center;
 
             .pager-item {
+                cursor: pointer;
                 vertical-align: top;
                 display: inline-block;
                 position: relative;
