--- a/src/components/znkExercise/core/template/znkExercisePagerDrv.html
+++ b/src/components/znkExercise/core/template/znkExercisePagerDrv.html
@@ -1,6 +1,6 @@
 <znk-scroll>
     <div class="pager-items-wrapper">
-        <div class="pager-item"
+        <div class="pager-item noselect"
              ng-repeat="question in questions track by question.id"
              question-status="question.__questionStatus"
              question="question"
