--- a/src/components/popUp/_popup.scss
+++ b/src/components/popUp/_popup.scss
@@ -58,6 +58,7 @@
             }
 
             .znk-popup-buttons{
+                cursor: pointer;
                 @include display-flex;
                 @include justify-content(center);
                 border-radius: 0px 0px 15px 15px;
