--- a/src/components/popUp/_popup.scss
+++ b/src/components/popUp/_popup.scss
@@ -8,11 +8,16 @@
         right: 0;
         background: $tbgColor1;
         text-align: center;
+        display: flex;
+        display: -webkit-flex;
+        flex-direction: column;
+        -webkit-flex-direction: column;
+        justify-content: center;
+        -webkit-justify-content: center;
 
         .znk-popup-wrapper{
             width: 390px;
             margin:{
-                top: 250px;
                 right: auto;
                 left: auto;
             }
