removing bind once

--- a/src/components/znkExercise/answerTypes/templates/rateAnswerDrv.html
+++ b/src/components/znkExercise/answerTypes/templates/rateAnswerDrv.html
@@ -2,11 +2,11 @@
 
     <div class="checkbox-items-wrapper" >
 
-        <div class="item-repeater" ng-repeat="item in ::d.itemsArray track by $index">
+        <div class="item-repeater" ng-repeat="item in d.itemsArray">
             <svg-icon class="correct-icon" name="correct"></svg-icon>
             <svg-icon class="wrong-icon" name="wrong"></svg-icon>
             <div class="checkbox-item" ng-click="clickHandler($index)">
-                <div class="item-index">{{ ::($index + 2)}}</div>
+                <div class="item-index">{{$index +  2}}</div>
             </div>
             <div class="correct-answer-line"></div>
         </div>
