--- a/src/core/scss/imports/_colors.scss
+++ b/src/core/scss/imports/_colors.scss
@@ -30,6 +30,8 @@ $bcColor4: #ff6766;
 
 //background with transparency
 $tbgColor1: rgba(0,0,0,0.7);
+$tbgColor2: rgba(255, 255, 255, 0.91);
+$tbgColor3: rgba(0, 0, 0, 0.08);
 
 /*
 //backgrounds
