done btn overlapping pager bug fixed

--- a/src/components/znkExercise/core/template/btnSectionDesktopTemplate.html
+++ b/src/components/znkExercise/core/template/btnSectionDesktopTemplate.html
@@ -11,9 +11,9 @@
         <svg-icon name="chevron"></svg-icon>
     </button>
 </div>
-<div class="done-btn-wrap">
-    <button class="done-btn ng-hide show-opacity-animate"
-            ng-show="vm.showDoneButton"
+<div class="done-btn-wrap ng-hide show-opacity-animate" ng-show="vm.showDoneButton">
+    <button class="done-btn"
+
             ng-click="onDone()">DONE
     </button>
 </div>
