--- a/src/core/scss/imports/_colors.scss
+++ b/src/core/scss/imports/_colors.scss
@@ -7,6 +7,7 @@ $fcColor5: #0a9bad;
 $fcColor6: #4f4d4d;
 $fcColor7: #87ca4d;
 $fcColor8: #b7b7b7;
+$fcColor9: #757a83;
 
 //background color
 $bgColor1: #ff6766;
@@ -21,12 +22,15 @@ $bgColor9: #e8e7e7;
 $bgColor10: #f5f8fa;
 $bgColor11: #e55958;
 $bgColor12: #80c248;
+$bgColor13: #fafafa;
+$bgColor14: #6ac1cc;
 
 //border color
 $bcColor1: #87ca4d;
 $bcColor2: #0a9bad;
 $bcColor3: #CFCFCF;
 $bcColor4: #ff6766;
+$bcColor5: #757a83;
 
 //background with transparency
 $tbgColor1: rgba(0,0,0,0.7);
