--- a/src/core/scss/main.scss
+++ b/src/core/scss/main.scss
@@ -8,4 +8,5 @@
         '../../components/znkExercise/scss/znk-exercise',
         '../../components/znkExercise/scss/select-answer-drv',
         '../../components/znkExercise/scss/rate-answer-drv',
+        '../../components/znkExercise/scss/free-text-answer-drv',
         '../../components/popUp/popup';
