--- a/src/core/scss/imports/_colors.scss
+++ b/src/core/scss/imports/_colors.scss
@@ -8,6 +8,7 @@ $fcColor6: #4f4d4d;
 $fcColor7: #87ca4d;
 $fcColor8: #b7b7b7;
 $fcColor9: #757a83;
+$fcColor10: #ff6766;
 
 //background color
 $bgColor1: #ff6766;
