--- a/src/components/znkExercise/scss/_znk-exercise-drv-desktop.scss
+++ b/src/components/znkExercise/scss/_znk-exercise-drv-desktop.scss
@@ -106,6 +106,9 @@ znk-exercise.desktop {
                     radius: 30px;
                 }
                 cursor: pointer;
+                &:focus {
+                    background: $bgColor15;
+                }
             }
         }
     }
