--- a/src/core/scss/imports/_colors.scss
+++ b/src/core/scss/imports/_colors.scss
@@ -25,6 +25,7 @@ $bgColor11: #e55958;
 $bgColor12: #80c248;
 $bgColor13: #fafafa;
 $bgColor14: #6ac1cc;
+$bgColor15: #f08a1c;
 
 //border color
 $bcColor1: #87ca4d;
