--- a/src/components/znkExercise/core/template/btnSectionDesktopTemplate.html
+++ b/src/components/znkExercise/core/template/btnSectionDesktopTemplate.html
@@ -12,7 +12,7 @@
     </button>
 </div>
 <div class="done-btn-wrap show-opacity-animate" ng-if="vm.showDoneButton">
-    <button autofocus class="done-btn"
+    <button tabindex="1" autofocus class="done-btn"
             ng-click="onDone()">DONE
     </button>
 </div>
