--- a/src/components/znkExercise/answerTypes/templates/selectAnswerDrv.html
+++ b/src/components/znkExercise/answerTypes/templates/selectAnswerDrv.html
@@ -1,7 +1,7 @@
 <div ng-repeat="answer in ::d.answers track by answer.id"
      class="answer"
      ng-click="d.click(answer)"
-    tabindex="">
+     tabindex="-1">
     <div class="content-wrapper">
         <div class="answer-index-wrapper">
             <span class="index-char">{{::d.getIndexChar($index)}}</span>
