--- a/src/components/znkExercise/answerTypes/templates/freeTextAnswerDrv.html
+++ b/src/components/znkExercise/answerTypes/templates/freeTextAnswerDrv.html
@@ -10,12 +10,8 @@
     </div>
 
     <div ng-switch-when="false">
-        <div class="instructions-title-wrapper">
-            <div class="instructions-title">Type your answer in the textboxes below.<svg-icon name="info"></svg-icon></div>
-            <div class="note-title">Note: answers cannot be longer than four characters (including decimal points and fractions signs)</div>
-        </div>
         <div class="input-wrapper">
-            <input min="0" max="99" required ng-model="d.userAnswer">
+            <input  ng-model-options="{ getterSetter: true }" ng-model="d.userAnswer">
             <div class="arrow-wrapper" ng-click="clickHandler(d.userAnswer)">
                 <svg-icon name="arrow"></svg-icon>
                 <div class="svg-back"></div>
