--- a/src/components/znkExercise/core/template/btnSectionDesktopTemplate.html
+++ b/src/components/znkExercise/core/template/btnSectionDesktopTemplate.html
@@ -13,7 +13,7 @@
 </div>
 <div class="done-btn-wrap show-opacity-animate" ng-if="vm.showDoneButton">
     <button tabindex="0"
-            autofocus="true"
+            ng-autofocus="true"
             class="done-btn"
             ng-click="onDone()">DONE
     </button>
