--- a/src/components/znkExercise/answerTypes/templates/freeTextAnswerDrv.html
+++ b/src/components/znkExercise/answerTypes/templates/freeTextAnswerDrv.html
@@ -2,7 +2,7 @@
 
     <div ng-switch-when="true" ng-class="userAnswerStatus">
         <div class="answer-status">
-            <div class="user-answer">{{d.userAnswer}}</div>
+            <div class="user-answer">{{d.userAnswer()}}</div>
             <svg-icon class="correct-icon" name="correct"></svg-icon>
             <svg-icon class="wrong-icon" name="wrong"></svg-icon>
         </div>
@@ -11,8 +11,8 @@
 
     <div ng-switch-when="false">
         <div class="input-wrapper">
-            <input  ng-model-options="{ getterSetter: true }" ng-model="d.userAnswer">
-            <div class="arrow-wrapper" ng-click="clickHandler(d.userAnswer)">
+            <input ng-model-options="{ getterSetter: true }" ng-model="d.userAnswer">
+            <div class="arrow-wrapper" ng-click="clickHandler()">
                 <svg-icon name="arrow"></svg-icon>
                 <div class="svg-back"></div>
             </div>
