--- a/src/components/znkExercise/main.scss
+++ b/src/components/znkExercise/main.scss
@@ -2,11 +2,11 @@
         './src/scss/imports/colors',
         './src/scss/imports/mixins';
 
-@import 'free-text-answer-drv',
-        'rate-answer-drv',
-        'select-answer-drv',
-        'znk-exercise-drv-desktop',
-        'znk-exercise-pager-drv';
+@import 'scss/free-text-answer-drv',
+        'scss/rate-answer-drv',
+        'scss/select-answer-drv',
+        'scss/znk-exercise-drv-desktop',
+        'scss/znk-exercise-pager-drv';
 
 znk-exercise {
     &:not(.done-btn-show){
