- fixed gulpfile - added deviceNotSupported directive

--- a/src/components/deviceNotSupported/deviceNotSupported.template.html
+++ b/src/components/deviceNotSupported/deviceNotSupported.template.html
@@ -1,7 +1,8 @@
 <div class="device-not-supported-inner">
     <h1>{{title}}</h1>
     <h2>{{subTitle}}</h2>
-    <div class="image-container">
+    <div class="image-container"
+         ng-style="styleObj">
         <img ng-src="{{imageSrc}}" alt="hidden">
     </div>
 </div>
