svg icon style was modified

--- a/src/components/svgIcon/main.scss
+++ b/src/components/svgIcon/main.scss
@@ -2,7 +2,10 @@
         './src/scss/imports/colors',
         './src/scss/imports/mixins';
 
-svg-icon{
-  display: block;
-  overflow: hidden;
+svg-icon {
+    display: block;
+
+    svg {
+        display: block;
+    }
 }
