mixins component was added

--- a/src/components/mixins/_mixins.scss
+++ b/src/components/mixins/_mixins.scss
@@ -1,5 +1,5 @@
 //cross browser
-@mixin format-input-placeholder($color, $opacity) {
+@mixin placeholder($color, $opacity) {
     ::-webkit-input-placeholder {
         color: $color;
     }
