device-not-supported DRV: - if on DEV env (debug is true) - do not run

--- a/src/components/deviceNotSupported/main.scss
+++ b/src/components/deviceNotSupported/main.scss
@@ -3,6 +3,9 @@
         './src/scss/imports/mixins';
 
 device-not-supported {
+    &.disabled {
+        display: none;
+    }
     .device-not-supported-inner {
         display: none;
     }
