svg icon display was changed to inline-block

--- a/src/components/svgIcon/main.scss
+++ b/src/components/svgIcon/main.scss
@@ -3,7 +3,7 @@
         './src/scss/imports/mixins';
 
 svg-icon {
-    display: block;
+    display: inline-block;
 
     svg {
         display: block;
