--- a/src/components/svgIcon/main.scss
+++ b/src/components/svgIcon/main.scss
@@ -3,7 +3,9 @@
         './src/scss/imports/mixins';
 
 svg-icon {
-    display: inline-block;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
 
     svg {
         display: block;
