- fixed corrent / wrong icon when answer text is too long - now the icon will not get smaller

--- a/src/components/znkExercise/scss/_select-answer-drv.scss
+++ b/src/components/znkExercise/scss/_select-answer-drv.scss
@@ -7,8 +7,10 @@ select-answer{
         @include align-items(center);
         margin-bottom: 20px;
 
-        .correct-icon-drv, .wrong-icon-drv{
+        .correct-icon-drv,
+        .wrong-icon-drv {
             display: none;
+            flex-shrink: 0;
         }
 
         &.wrong{
