--- a/src/components/znkExercise/answerTypes/templates/freeTextAnswerDrv.html
+++ b/src/components/znkExercise/answerTypes/templates/freeTextAnswerDrv.html
@@ -1,6 +1,6 @@
 <div class="free-text-answer-wrapper" ng-switch="showCorrectAnswer">
 
-    <div ng-switch-when="true" ng-class="userAnswerStatus">
+    <div ng-switch-when="true" class="answer-status-wrapper" ng-class="userAnswerStatus">
         <div class="answer-status">
             <div class="user-answer">{{d.userAnswer}}</div>
             <svg-icon class="correct-icon" name="correct"></svg-icon>
@@ -9,13 +9,11 @@
         <div class="correct-answer">Correct answer: <span>{{correctAnswer}}</span></div>
     </div>
 
-    <div ng-switch-when="false">
-        <div class="input-wrapper">
-            <input ng-model-options="{ getterSetter: true }" ng-model="d.userAnswerGetterSetter">
-            <div class="arrow-wrapper" ng-click="clickHandler()">
-                <svg-icon name="arrow"></svg-icon>
-                <div class="svg-back"></div>
-            </div>
+    <div  ng-switch-when="false" class="input-wrapper">
+        <input ng-model-options="{ getterSetter: true }" ng-model="d.userAnswerGetterSetter">
+        <div class="arrow-wrapper" ng-click="clickHandler()">
+            <svg-icon name="arrow"></svg-icon>
+            <div class="svg-back"></div>
         </div>
     </div>
 
