--- a/src/scss/imports/_colors.scss
+++ b/src/scss/imports/_colors.scss
@@ -26,6 +26,7 @@ $bgColor12: #80c248;
 $bgColor13: #fafafa;
 $bgColor14: #6ac1cc;
 $bgColor15: #f08a1c;
+$bgColor16: #2c808a;
 
 //border color
 $bcColor1: #87ca4d;
