--- a/src/components/znkExercise/main.scss
+++ b/src/components/znkExercise/main.scss
@@ -2,8 +2,7 @@
         './src/scss/imports/colors',
         './src/scss/imports/mixins';
 
-@import 'scss/free-text-answer-drv',
-        'scss/rate-answer-drv',
+@import 'scss/rate-answer-drv',
         'scss/select-answer-drv',
         'scss/znk-exercise-drv-desktop',
         'scss/znk-exercise-pager-drv';
