--- a/src/scss/imports/_colors.scss
+++ b/src/scss/imports/_colors.scss
@@ -27,6 +27,7 @@ $bgColor13: #fafafa;
 $bgColor14: #6ac1cc;
 $bgColor15: #f08a1c;
 $bgColor16: #2c808a;
+$bgColor17: #ebebeb;
 
 //border color
 $bcColor1: #87ca4d;
@@ -39,6 +40,7 @@ $bcColor5: #757a83;
 $tbgColor1: rgba(0,0,0,0.7);
 $tbgColor2: rgba(255, 255, 255, 0.91);
 $tbgColor3: rgba(0, 0, 0, 0.08);
+$tbgColor4: rgba(0, 0, 0, 0.08);
 
 /*
 //backgrounds
