--- a/src/components/znkExercise/main.scss
+++ b/src/components/znkExercise/main.scss
@@ -8,7 +8,7 @@
 znk-exercise {
     &:not(.done-btn-show){
         .question-bottom-shadow {
-            width: 0%;
+            width: 0;
         }
     }
 
