--- a/src/components/znkAudioPlayer/templates/znkImageAudio.template.html
+++ b/src/components/znkAudioPlayer/templates/znkImageAudio.template.html
@@ -1,8 +1,9 @@
 <div class="wrapper" ng-class="{'no-footer': hideFooter}">
-    <div class="bg-img only-tablet" ng-style="{'background-image': 'url(' + d.blurredImage + ')'}"></div>
-     <div class="inner-section">
+    <!--<div class="bg-img only-tablet" ng-style="{'background-image': 'url(' + d.blurredImage + ')'}"></div>-->
+    <!--todo- do we need blurred image?-->
+    <div class="inner-section">
         <img class="inner" ng-src="{{::d.image}}">
-     </div>
+    </div>
     <div class="audio-footer inverted" ng-if="::!hideFooter">
         <ng-switch on="audioPlayer.currState">
             <div class="play-button-wrapper"
@@ -13,14 +14,14 @@
                     PLAY AUDIO
                 </button>
             </div>
-            <znk-audio-player-drv ng-switch-when="2"
-                                  source="source"
-                                  on-ended="audioPlayer.audioEnded(allowReplay)"
-                                  auto-play="true">
-            </znk-audio-player-drv>
+            <znk-audio-player ng-switch-when="2"
+                              source="source"
+                              on-ended="audioPlayer.audioEnded(allowReplay)"
+                              auto-play="true">
+            </znk-audio-player>
             <div class="ended-msg"
                  ng-switch-when="3">
-                 This audio was already played
+                This audio was already played
             </div>
         </ng-switch>
     </div>
